--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -217,7 +217,7 @@ At the end of the experiment, participants filled in a questionnaire asking abou
 
 Three dependent variables were computed for data analysis. Interonset intervals (IOIs) are the intervals between onsets of adjacent notes and provide a measure of tempo. Key-overlap time (KOT) is the difference between the offset time of the current tone (i.e., key release time) and the onset time of the ensuing tone, and measures the smoothness of musical sequences (Bresin \& Battel, 2000). A positive value indicates smooth legato styles due to overlap between the current and ensuing tone whereas a negative value indicates sharp staccato styles due to separation between the current and ensuing tone. Tone intensity is assessed by key velocity (KV) and measures the loudness of a musical note. The value of KV in MIDI varies between 0 (minimum) and 127 (maximum).
 
-Data cleaning, preprocessing and statistical analysis were performed in R version 4.0.5. For statistical analysis, only 16th notes with expressive notations were included. Overall, three trials were excluded from data analysis because participants did not follow the sheet music or stopped performing before the end. Pitch errors were identified by comparing the sequence of musical notes produced by a participant with the sequence of musical notes according to the sheet music. Pitch errors included either extra, missing or substituted tones and were manually removed by using the \emph{editData} R package. For onsets, 5.16\% of the trials contained at least one pitch error (extra notes: 2.78\%, missing notes: 2.24\%, substituted notes: 0.13\%). For offsets, 6.24\% of the trials contained at least one pitch error (extra notes: 2.78\%, missing notes: 2.29\%, substituted notes: 1.17\%). In addition to pitch errors, we removed outliers for IOIs, KOT and KV, defined as values more than 3 standard deviations from the mean of each dependent variable and excluded from data analysis. For each dependent variable, this resulted in less than 5\% of overall responses being removed as outliers.
+Data cleaning, preprocessing and statistical analysis were performed in R version 4.0.5. For statistical analysis, only 16th notes with expressive notations were included. Overall, three trials were excluded from data analysis because participants did not follow the sheet music or stopped performing before the end. Pitch errors were identified by comparing the sequence of musical notes produced by a participant with the sequence of musical notes according to the sheet music. Pitch errors included either extra, missing or substituted tones and were manually removed by using the \emph{editData} R package. For onsets, 11.65\% of the trials contained at least one pitch error (extra notes: 6.28\%, missing notes: 5.07\%, substituted notes: 0.30\%). For offsets, 14.08\% of the trials contained at least one pitch error (extra notes: 6.28\%, missing notes: 5.17\%, substituted notes: 2.63\%). As a result, less than 1 \% of the total responses (i.e., piano keystrokes) were corrected. In addition to pitch errors, we removed outliers for IOIs, KOT and KV, defined as values more than 3 standard deviations from the mean of each dependent variable and excluded from data analysis. For each dependent variable, this resulted in less than 5\% of overall responses being removed as outliers.
 
 We performed separate analyses for the two expressive techniques (i.e., articulation, dynamics). A paired-sample \emph{t}-test or a Wilcoxon signed-rank tests (a non-parametric alternative to a paired \emph{t}-test) was performed to compare the mean IOIs in the teaching and performing condition. For KOT and KV, we performed a 2 x 2 repeated-measures analysis of variance (ANOVA) with the factors Condition (teaching vs.~performing) and Subcomponent (LS; legato vs.~staccato or FP; forte vs.~piano, respectively). The \emph{t.test} function in the \emph{stats} R package was used for a \emph{t}-test. The \emph{aov\_car} function in the \emph{afex} R package was used for a repeated-measures ANOVA. For post-hoc comparisons on the estimated marginal means, we used the \emph{emmeans} R package.
 
@@ -235,7 +235,7 @@ All effects are reported as significant at \emph{p} \textless{} .05. We first re
 \hypertarget{articulation-interonset-intervals-iois}{%
 \subsubsection{2.2.1. Articulation: Interonset Intervals (IOIs)}\label{articulation-interonset-intervals-iois}}
 
-In order to compare the mean IOIs between the teaching and performing condition, we conducted a Wiscoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution (\emph{p} \textless{} 0.001). The Wiscoxon Signed-rank test revealed that participants played more slowly in the teaching condition {[}\emph{Mdn} = 189.55 (ms), \emph{IQR} = 26.74{]} than in the performing condition {[}\emph{Mdn} = 185.24 (ms), \emph{IQR} = 19.32{]} while playing the piece with the notated articulation (\emph{p} = 0.021; \emph{Figure \ref{fig:ioi-1}}).
+In order to compare the mean IOIs between the teaching and performing condition, we conducted a Wiscoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution (\emph{p} \textless{} \textless{} 0.001). The Wiscoxon Signed-rank test revealed that participants played more slowly in the teaching condition {[}\emph{Mdn} = 189.55 (ms), \emph{IQR} = 26.74{]} than in the performing condition {[}\emph{Mdn} = 185.24 (ms), \emph{IQR} = 19.32{]} while playing the piece with the notated articulation (\emph{p} = 0.021; \emph{Figure \ref{fig:ioi-1}}).
 
 \hypertarget{articulation-key-overlap-time-kot}{%
 \subsubsection{2.2.2. Articulation: Key-Overlap Time (KOT)}\label{articulation-key-overlap-time-kot}}
@@ -250,7 +250,7 @@ A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~perfo
 \hypertarget{dynamics-interonset-intervals-iois}{%
 \subsubsection{2.2.4. Dynamics: Interonset Intervals (IOIs)}\label{dynamics-interonset-intervals-iois}}
 
-The Wiscoxon Signed-rank test revealed no significant difference between the teaching condition {[}\emph{Mdn} = 186.29 (ms), \emph{IQR} = 21.83{]} and the performing condition {[}\emph{Mdn} = 186.27 (ms), \emph{IQR} = 19.58{]} while playing the piece with the notated dynamics (\emph{p} = 0.11; \emph{Figure \ref{fig:ioi-1}}).
+In order to compare the mean IOIs between the teaching and performing condition, we conducted a Wiscoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution (\emph{p} \textless{} 0.001). The Wiscoxon Signed-rank test revealed no significant difference between the teaching condition {[}\emph{Mdn} = 186.29 (ms), \emph{IQR} = 21.83{]} and the performing condition {[}\emph{Mdn} = 186.27 (ms), \emph{IQR} = 19.58{]} while playing the piece with the notated dynamics (\emph{p} = 0.11; \emph{Figure \ref{fig:ioi-1}}).
 
 \hypertarget{dynamics-key-velocity-kv}{%
 \subsubsection{2.2.5. Dynamics: Key Velocity (KV)}\label{dynamics-key-velocity-kv}}
@@ -299,7 +299,7 @@ In Experiment 1, we employed a simple musical scale in order to maximise experim
 \hypertarget{participants-1}{%
 \subsubsection{3.1.1. Participants}\label{participants-1}}
 
-We recruited 21 piano experts who already had a degree in (above bachelor or equivalent) in piano performance/teaching or were studying advanced piano performance at a music school at the time of recruitment. For data analysis, we excluded one participants due to insufficient motor skills, and one because of large tempo deviations (outside 2 standard deviations from the average tempo across participants). Nineteen participants (9 female) were included in the data analysis. Most participants were right-handed (left: 2) with a mean age of 25.90 (\emph{SD} = 4.68). They had 15.65 years of practice on average (\emph{SD} = 5.67).
+We recruited 21 piano experts who already had a degree in (above bachelor or equivalent) in piano performance/teaching or were studying advanced piano performance at a music school at the time of recruitment. For data analysis, we excluded one participants due to insufficient motor skills, and one because of large tempo deviations (outside 2 standard deviations from the average tempo across participants). Twenty participants (9 female) were included in the data analysis. Most participants were right-handed (left: 2) with a mean age of 25.90 (\emph{SD} = 4.68). They had 15.65 years of practice on average (\emph{SD} = 5.67).
 
 \hypertarget{apparatus-and-stimuli-1}{%
 \subsubsection{3.1.2. Apparatus and stimuli}\label{apparatus-and-stimuli-1}}
@@ -311,10 +311,10 @@ The same apparatus as in Experiment 1 was used. We selected Clementi's Sonatina 
 
 We employed the same procedure as in Experiment 1 with several modifications. First, all participants were required to memorise the piece without expressive notations (i.e., \emph{Figure \ref{fig:stimuli-2}, A}) prior to the experiment. Second, we modified the wording of instructions for the performing condition so that both instructions had the same focus on expressive notations (see details in \emph{\protect\hyperlink{supplemental}{Supplementary Materials}}). Third, participants could choose their preferred tempo from one of three options (100, 110 and 120 beats per minute). The chosen tempo was again cued by a leading metronome. In order to make sure that participants memorised the piece and had sufficient motor skills, we asked participants to perform the piece without looking at the non-expressive sheet music. As Experiment 1, those who could not perform the piece twice consecutively within 5 attempts were excluded from data analysis (as a result, one participant was excluded). The rest of the procedure was identical to Experiment 1.
 
-\hypertarget{design-and-data-analysis}{%
-\subsubsection{3.1.4. Design and data analysis}\label{design-and-data-analysis}}
+\hypertarget{data-analysis-1}{%
+\subsubsection{3.1.4. Data analysis}\label{data-analysis-1}}
 
-Data cleaning, preprocessing and statistical analysis were almost identical to Experiment 1. For statistical analysis, only 8th notes with expressive notations were included. As a result, only one 8th note in the 4th measure without any expression was not included. IOIs were normalised by their preferred tempo because each participant chose a tempo from the three options. Given the different tempi, a key-overlap ratio (KOR) was calculated by dividing KOT by the mean IOI of each performance in order to normalise KOT. Additionally, we include KV difference (i.e., KV difference for each interval) at transition points (i.e., forte to piano or piano to forte) as a dependent variable based on the findings of Experiment 1. Three trials were entirely excluded from data analysis because participants did not follow the sheet music. Using the same approach as in Experiment 1, pitch errors were removed manually. For onsets, 3.32\% of the trials contained at least one pitch error (extra notes; 1.66\%, missing notes; 1.57\%, substituted notes; 0.09\%). For offsets, 5.11\% of the trials contained at least one pitch error (extra notes; 1.66\%, missing notes; 1.57\%, substituted notes; 1.88\%). For each dependent variable, removing outliers (i.e., responses outside 3 standard deviations from the mean) resulted in less than 5\% of overall responses being removed.
+Data cleaning, preprocessing and statistical analysis were almost identical to Experiment 1. For statistical analysis, only 8th notes with expressive notations were included. As a result, only one 8th note in the 4th measure without any expression was not included. IOIs were normalised by their preferred tempo because each participant chose a tempo from the three options. Given the different tempi, a key-overlap ratio (KOR) was calculated by dividing KOT by the mean IOI of each performance in order to normalise KOT. Additionally, we include KV difference (i.e., KV difference for each interval) at transition points (i.e., forte to piano or piano to forte) as a dependent variable based on the findings of Experiment 1. Three trials were entirely excluded from data analysis because participants did not follow the sheet music. Using the same approach as in Experiment 1, pitch errors were removed manually. For onsets, 11.62\% of the trials contained at least one pitch error (extra notes; 5.81\%, missing notes; 5.49\%, substituted notes; 0.31\%). For offsets, 17.90\% of the trials contained at least one pitch error (extra notes; 5.81\%, missing notes; 5.49\%, substituted notes; 6.59\%). For each dependent variable, removing outliers (i.e., responses outside 3 standard deviations from the mean) resulted in less than 5\% of overall responses being removed.
 
 \begin{figure}
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/stim-2-1} \caption{\label{fig:stimuli-2}(A)Non-expressive sheet music. (B)Articulation. The curved line (slur) indicates legato and the dots indicate staccato. (C)Dynamics. The symbol `f' denotes forte and the symbol `p' denotes piano. For data analysis, only the 8th notes were included.}\label{fig:stim-2}
@@ -330,38 +330,38 @@ As Experiment 1, we first report results for performance of the piece with the n
 \hypertarget{articulation-interonset-intervals-iois-1}{%
 \subsubsection{3.2.1. Articulation: Interonset Intervals (IOIs)}\label{articulation-interonset-intervals-iois-1}}
 
-A paired-sample \emph{t}-test showed that participants played more slowly in the teaching condition {[}\emph{M} = 0.97, \emph{SD} = 0.042{]} than in the performing condition {[}\emph{M} = 0.96, \emph{SD} = 0.034{]} while playing the piece with notated articulation (\emph{t}(18) = 2.64
-, \emph{p} = 0.017; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was a significant difference between the two condition (\emph{p} = 0.026).
+A paired-sample \emph{t}-test showed that participants played more slowly in the teaching condition {[}\emph{M} = 0.97, \emph{SD} = 0.049{]} than in the performing condition {[}\emph{M} = 0.95, \emph{SD} = 0.040{]} while playing the piece with notated articulation (\emph{t}(19) = 2.47
+, \emph{p} = 0.023; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was a significant difference between the two condition (\emph{p} = 0.033).
 
 \hypertarget{articulation-key-overlap-ratio-kor}{%
 \subsubsection{3.2.2. Articulation: Key-Overlap Ratio (KOR)}\label{articulation-key-overlap-ratio-kor}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,18) = 2324, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.98) and a significant interaction between Condition and Subcomponent-LS (\emph{F}(1,18) = 6.90, \emph{p} = 0.017, \(\eta_G^2\) = 0.01; \emph{Figure \ref{fig:kor-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that participants produced shorter staccato in the teaching condition {[}\emph{M} = -0.77, \emph{SD} = 0.06{]} than in the performing condition {[}\emph{M} = -0.74, \emph{SD} = 0.04{]} (\emph{p} = 0.001) while there was no significant difference in legato between the teaching {[}\emph{M} = 0.12, \emph{SD} = 0.07{]} and performing condition {[}\emph{M} = 0.12, \emph{SD} = 0.07{]} (\emph{p} = 0.85).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,19) = 2573, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.98) and a significant interaction between Condition and Subcomponent-LS (\emph{F}(1,19) = 8.91, \emph{p} = 0.008, \(\eta_G^2\) = 0.01; \emph{Figure \ref{fig:kor-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that participants produced shorter staccato in the teaching condition {[}\emph{M} = -0.76, \emph{SD} = 0.06{]} than in the performing condition {[}\emph{M} = -0.74, \emph{SD} = 0.04{]} (\emph{p} = 0.002) while there was no significant difference in legato between the teaching {[}\emph{M} = 0.12, \emph{SD} = 0.07{]} and performing condition {[}\emph{M} = 0.12, \emph{SD} = 0.07{]} (\emph{p} = 0.56).
 
 \hypertarget{articulation-key-velocity-kv-1}{%
 \subsubsection{3.2.3. Articulation: Key Velocity (KV)}\label{articulation-key-velocity-kv-1}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,18) = 8.15, \emph{p} = 0.011, \(\eta_G^2\) = 0.04; \emph{Figure \ref{fig:vel-2}}), reflecting louder sound for legato notes compared to staccato notes. Neither the main effect of Condition (\emph{F}(1,18) = 0.46, \emph{p} = 0.51, \(\eta_G^2\) = 0.001) nor the interaction between Condition and Subcomponent-LS (\emph{F}(1,18) = 8.15, \emph{p} = 0.80, \(\eta_G^2\) = 0.000) was significant.
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,19) = 7.91, \emph{p} = 0.011, \(\eta_G^2\) = 0.03; \emph{Figure \ref{fig:vel-2}}), reflecting louder sound for legato notes compared to staccato notes. Neither the main effect of Condition (\emph{F}(1,19) = 1.33, \emph{p} = 0.26, \(\eta_G^2\) = 0.003) nor the interaction between Condition and Subcomponent-LS (\emph{F}(1,19) = 7.91, \emph{p} = 0.71, \(\eta_G^2\) = 0.000) was significant.
 
 \hypertarget{dynamics-interonset-intervals-iois-1}{%
 \subsubsection{3.2.4. Dynamics: Interonset Intervals (IOIs)}\label{dynamics-interonset-intervals-iois-1}}
 
-A paired-sample \emph{t}-test showed no significant difference between the teaching condition {[}\emph{M} = 0.96, \emph{SD} = 0.041{]} and the performing condition {[}\emph{M} = 0.96, \emph{SD} = 0.037{]} while playing the piece with the notated dynamics (\emph{t}(18) = 0.37, \emph{p} = 0.72; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was no significant difference between the two conditions (\emph{p} = 0.92).
+A paired-sample \emph{t}-test showed no significant difference between the teaching condition {[}\emph{M} = 0.96, \emph{SD} = 0.048{]} and the performing condition {[}\emph{M} = 0.96, \emph{SD} = 0.043{]} while playing the piece with the notated dynamics (\emph{t}(19) = 0.21, \emph{p} = 0.84; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was no significant difference between the two conditions (\emph{p} = 0.96).
 
 \hypertarget{dynamics-key-velocity-kv-1}{%
 \subsubsection{3.2.5. Dynamics: Key Velocity (KV)}\label{dynamics-key-velocity-kv-1}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,18) = 126, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.72) and a significant interaction between Condition and Subcomponent-FP (\emph{F}(1,18) = 6.11, \emph{p} = 0.024, \(\eta_G^2\) = 0.022; \emph{Figure \ref{fig:vel-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment revealed that participants produced louder forte (\emph{p} = 0.036) and softer piano (\emph{p} = 0.028)in the teaching condition {[}Forte; \emph{M} = 82.55, \emph{SD} = 8.57, Piano; \emph{M} = 60.41, \emph{SD} = 3.83{]} than in the performing condition {[}Forte; \emph{M} = 80.71, \emph{SD} = 7.53, Piano; \emph{M} = 62.34, \emph{SD} = 4.93{]} than in the performing condition.
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,19) = 132, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.72) and a significant interaction between Condition and Subcomponent-FP (\emph{F}(1,19) = 6.12, \emph{p} = 0.023, \(\eta_G^2\) = 0.018; \emph{Figure \ref{fig:vel-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment revealed that participants produced louder forte (\emph{p} = 0.040) and softer piano (\emph{p} = 0.024)in the teaching condition {[}Forte; \emph{M} = 83.20, \emph{SD} = 8.84, Piano; \emph{M} = 60.53, \emph{SD} = 3.76{]} than in the performing condition {[}Forte; \emph{M} = 81.49, \emph{SD} = 8.12, Piano; \emph{M} = 62.42, \emph{SD} = 4.82{]} than in the performing condition.
 
 \hypertarget{kv-transition-points}{%
 \subsubsection{3.2.6. KV Transition Points}\label{kv-transition-points}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (FtoP vs.~PtoF) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,18) = 111, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.82) and a significant interaction of Condition and Subcomponent-FP (\emph{F}(1,18) = 9.77, \emph{p} = 0.006, \(\eta_G^2\) = 0.064; \emph{Figure \ref{fig:vel-diff}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was a larger KV difference when the expressive notation changed from forte to piano and from piano to forte in the teaching condition {[}FtoP; \emph{M} = -17.35, \emph{SD} = 8.46, PtoF; \emph{M} = 20.60, \emph{SD} = 9.10{]} than in the performing condition {[}FtoP; \emph{M} = -13.71, \emph{SD} = 7.73, PtoF; \emph{M} = 15.87, \emph{SD} = 7.47{]} (FtoP; \emph{p} = 0.017, PtoF; \emph{p} = 0.003).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (FtoP vs.~PtoF) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,19) = 124, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.82) and a significant interaction of Condition and Subcomponent-FP (\emph{F}(1,19) = 9.15, \emph{p} = 0.007, \(\eta_G^2\) = 0.059; \emph{Figure \ref{fig:vel-diff}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was a larger KV difference when the expressive notation changed from forte to piano and from piano to forte in the teaching condition {[}FtoP; \emph{M} = -17.23, \emph{SD} = 8.26, PtoF; \emph{M} = 20.71, \emph{SD} = 8.87{]} than in the performing condition {[}FtoP; \emph{M} = -14.04, \emph{SD} = 7.67, PtoF; \emph{M} = 16.05, \emph{SD} = 7.32{]} (FtoP; \emph{p} = 0.029, PtoF; \emph{p} = 0.002).
 
 \hypertarget{dynamics-key-overlap-ratio-kor}{%
 \subsubsection{3.2.7. Dynamics: Key-Overlap Ratio (KOR)}\label{dynamics-key-overlap-ratio-kor}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,18) = 559, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.93), reflecting more key overlap for forte notes compared to piano notes. Neither the main effect of Condition (\emph{F}(1,18) = 0.016, \emph{p} = 0.90, \(\eta_G^2\) = 0.000) nor the interaction between Condition and Subcomponent-FP (\emph{F}(1,18) = 0.58, \emph{p} = 0.46, \(\eta_G^2\) = 0.001; \emph{Figure \ref{fig:kor-2}}) was significant.
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,19) = 630, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.94), reflecting more key overlap for forte notes compared to piano notes. Neither the main effect of Condition (\emph{F}(1,19) = 0.081, \emph{p} = 0.78, \(\eta_G^2\) = 0.000) nor the interaction between Condition and Subcomponent-FP (\emph{F}(1,19) = 0.35, \emph{p} = 0.56, \(\eta_G^2\) = 0.001; \emph{Figure \ref{fig:kor-2}}) was significant.
 
 \hypertarget{discussion-1}{%
 \subsection{3.3. Discussion}\label{discussion-1}}
