--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -353,8 +353,8 @@ A paired-sample \emph{t}-test showed no significant difference between the teach
 
 A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,19) = 132, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.72) and a significant interaction between Condition and Subcomponent-FP (\emph{F}(1,19) = 6.12, \emph{p} = 0.023, \(\eta_G^2\) = 0.018; \emph{Figure \ref{fig:vel-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment revealed that participants produced louder forte (\emph{p} = 0.040) and softer piano (\emph{p} = 0.024)in the teaching condition {[}Forte; \emph{M} = 83.20, \emph{SD} = 8.84, Piano; \emph{M} = 60.53, \emph{SD} = 3.76{]} than in the performing condition {[}Forte; \emph{M} = 81.49, \emph{SD} = 8.12, Piano; \emph{M} = 62.42, \emph{SD} = 4.82{]} than in the performing condition.
 
-\hypertarget{kv-transition-points}{%
-\subsubsection{3.2.6. KV Transition Points}\label{kv-transition-points}}
+\hypertarget{dynamics-kv-transition-points-1}{%
+\subsubsection{3.2.6. Dynamics: KV Transition Points}\label{dynamics-kv-transition-points-1}}
 
 A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (FtoP vs.~PtoF) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,19) = 124, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.82) and a significant interaction of Condition and Subcomponent-FP (\emph{F}(1,19) = 9.15, \emph{p} = 0.007, \(\eta_G^2\) = 0.059; \emph{Figure \ref{fig:vel-diff}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was a larger KV difference when the expressive notation changed from forte to piano and from piano to forte in the teaching condition {[}FtoP; \emph{M} = -17.23, \emph{SD} = 8.26, PtoF; \emph{M} = 20.71, \emph{SD} = 8.87{]} than in the performing condition {[}FtoP; \emph{M} = -14.04, \emph{SD} = 7.67, PtoF; \emph{M} = 16.05, \emph{SD} = 7.32{]} (FtoP; \emph{p} = 0.029, PtoF; \emph{p} = 0.002).
 
