--- a/experiment-1/analysis/stats/articulation.Rmd
+++ b/experiment-1/analysis/stats/articulation.Rmd
@@ -151,7 +151,7 @@ kot_art_all
 
 ### Plot
 #### Scatter plot
-- Error bars show SEM of the mean
+- Error bars show SEM of the mean.
 
 ```{r kot-art-all-scatter, echo = FALSE}
 ggerrorplot(kot_art, x = "Condition", y = "Mean", add = "jitter", add.params = list(color = "darkgray"), error.plot = "errorbar", color = "Condition", facet.by = "Subcomponent", xlab = "Condition", ylab = "KOT (ms)", title = "KOT: Articulation")
@@ -215,7 +215,7 @@ kot_art_trial_all
 
 ### Plot
 #### Line graph
-- Error bars show SEM of the mean
+- Error bars show SEM of the mean.
 
 ```{r kot-art-trial-all-line-legato, echo = FALSE}
 ggline(kot_art_trial[Subcomponent == "Legato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KOT (ms)", title = "KOT: Articulation/Legato") +
@@ -257,7 +257,7 @@ kor_art_all
 
 ### Plot
 #### Scatter plot
-- Error bars show SEM of the mean
+- Error bars show SEM of the mean.
 
 ```{r kor-art-all-scatter, echo = FALSE}
 ggerrorplot(kor_art, x = "Condition", y = "Mean", add = "jitter", add.params = list(color = "darkgray"), error.plot = "errorbar", color = "Condition", facet.by = "Subcomponent", xlab = "Condition", ylab = "KOR", title = "KOR: Articulation")
@@ -321,7 +321,7 @@ kor_art_trial_all
 
 ### Plot
 #### Line graph
-- Error bars show SEM of the mean
+- Error bars show SEM of the mean.
 
 ```{r kor-art-trial-all-line-legato, echo = FALSE}
 ggline(kor_art_trial[Subcomponent == "Legato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KOR", title = "KOR: Articulation/Legato") +
@@ -362,7 +362,7 @@ kot_dyn_all
 
 ### Plot
 #### Scatter plot
-- Error bars show SEM of the mean
+- Error bars show SEM of the mean.
 
 ```{r kot-dyn-all-scatter, echo = FALSE}
 ggerrorplot(kot_dyn, x = "Condition", y = "Mean", add = "jitter", add.params = list(color = "darkgray"), error.plot = "errorbar", color = "Condition", facet.by = "Subcomponent", xlab = "Condition", ylab = "KOT (ms)", title = "KOT: Dynamics")
@@ -420,7 +420,7 @@ kot_dyn_trial_all
 
 ### Plot
 #### Line graph
-- Error bars show SEM of the mean
+- Error bars show SEM of the mean.
 
 ```{r kot-dyn-trial-all-line-forte, echo = FALSE}
 ggline(kot_dyn_trial[Subcomponent == "Forte"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KOT (ms)", title = "KOT: Dynamics/Forte") +
@@ -460,7 +460,7 @@ kor_dyn_all
 
 ### Plot
 #### Scatter plot
-- Error bars show SEM of the mean
+- Error bars show SEM of the mean.
 
 ```{r kor-dyn-all-scatter, echo = FALSE}
 ggerrorplot(kor_dyn, x = "Condition", y = "Mean", add = "jitter", add.params = list(color = "darkgray"), error.plot = "errorbar", color = "Condition", facet.by = "Subcomponent", xlab = "Condition", ylab = "KOR", title = "KOR: Dynamics")
@@ -518,7 +518,7 @@ kor_dyn_trial_all
 
 ### Plot
 #### Line graph
-- Error bars show SEM of the mean
+- Error bars show SEM of the mean.
 
 ```{r kor-dyn-trial-all-line-forte, echo = FALSE}
 ggline(kor_dyn_trial[Subcomponent == "Forte"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KOR", title = "KOR: Dynamics/Forte") +
